--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 
      <form action="" method="">
           <center>
-          
+               <div id="azlogo"></div> 
      	<h2>Register</h2>
    
                <input type="text"  
@@ -24,7 +24,7 @@
                  placeholder="Re_Password"><br>
 
      	<button type="submit">Register</button>
-         <p>Already have an account?<a href="" class="ca">Login Now</a></p> 
+         <p>Already have an account?<a href="Login.html" class="ca">Login Now</a></p> 
           </center>
      </form>
 </body>
