--- a/home page.html
+++ b/home page.html
@@ -12,7 +12,7 @@
 
     <div class="head">
         <ul>
-           
+            <div class="dropdown" ><li><button id="logo"></button></li></div>
             <div class="dropdown"><li><button><a href="#">Home</a></button></li></div>
             <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Category  <i class="fa fa-caret-down"></i></a></button></li>
