home background added

--- a/home page.html
+++ b/home page.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
+    <div class="bphoto">
     <div class="head">
+
         <ul>
+           
             <div class="dropdown" ><li><button id="logo"></button></li></div>
             <div class="dropdown"><li><button><a href="#">Home</a></button></li></div>
             <div class="dropdown">
@@ -56,7 +58,7 @@
             
         </ul>
     </div>
-
+</div>
 
 </body>
 </html>
