--- a/Login.html
+++ b/Login.html
@@ -17,7 +17,7 @@
      	<input type="password" name="password" placeholder="Password"><br>
 
      	<button type="submit">Login</button>
-          <p>Don't have an Account?<a href="register.html" class="ca">Create an account</a></p>
+          <p>Don't have an Account?<a href="register.php" class="ca">Create an account</a></p>
 		  </center>
      </form>
 </body>
