--- a/home page.html
+++ b/home page.html
@@ -13,13 +13,13 @@
     <div class="head">
 
         <ul>
-           
+
             <div class="dropdown" ><li><button id="logo"></button></li></div>
             <div class="dropdown"><li><button><a href="#">Home</a></button></li></div>
             <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Category  <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
-                <a href="#">C Programming</a>
+                <a href="Cprograming.html">C Programming</a>
                 <a href="#">Java</a>
                 <a href="#">HTML</a>
                 <a href="#">CSS</a>
@@ -39,7 +39,7 @@
         <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Community <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
-                <a href="#">Forums</a>
+                <a href="forums.html">Forums</a>
                 <a href="#">Chat</a>
                 
             </div>
@@ -59,6 +59,7 @@
         </ul>
     </div>
 </div>
+<div class="footer"><p>Copyright &copy; AzCoding 2021</p></div>
 
 </body>
 </html>
