--- a/src/register.html
+++ b/src/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Register</title>
-	<link rel="stylesheet" type="text/css" href="loginregister.css">
+	<link rel="stylesheet" type="text/css" href="style/loginregister.css">
 </head>
 <body>
 
