Login php files create

--- a/home page.html
+++ b/home page.html
@@ -19,7 +19,7 @@
             <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Category  <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
-                <a href="Cprograming.html">C Programming</a>
+                <a href="Cprogramming.html">C Programming</a>
                 <a href="#">Java</a>
                 <a href="#">HTML</a>
                 <a href="#">CSS</a>
