--- a/Cprogramming.html
+++ b/Cprogramming.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category</title> <!--Page title -->
-    <link rel = "stylesheet" href = "style/Cprogramming.css"> <!--Link to External CSS file-->
+    <link rel = "stylesheet" href = "Cprogramming.css"> <!--Link to External CSS file-->
 </head>
 <body>
 
