change photo sizes

--- a/Home Branch/home page.html
+++ b/Home Branch/home page.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="bphoto">
-    <div class="head">
+    <div class="bphoto"><!--background photo-->
+    <div class="head"><!--Navigation Bar-->
 
         <ul>
 
@@ -19,7 +19,7 @@
             <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Category  <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
-                <a href="Cprogramming.html">C Programming</a>
+                <a href="category-branch/Cprogramming.html">C Programming</a>
                 <a href="#">Java</a>
                 <a href="#">HTML</a>
                 <a href="#">CSS</a>
@@ -39,13 +39,13 @@
         <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Community <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
-                <a href="forums.html">Forums</a>
+                <a href="community-branch/forums.html">Forums</a>
                 <a href="#">Chat</a>
                 
             </div>
         </div>
             
-            <div class="dropdown"><li><button><a href="#">Downloads</a></button></li></div>
+            <div class="dropdown"><li><button><a href="community-branch/downloads.html">Downloads</a></button></li></div>
 
             <div  class="dropdown" id="login">
                 <li><button  class="dropbtn" ><a href="#">Login <i class="fa fa-caret-down"></i></a></button></li>
@@ -59,10 +59,20 @@
         </ul>
     </div>
 </div>
-<div class="Cprograming"></div>
-<div class="html"></div>
-<div class="css"></div>
-<div class="java"></div>
+
+<!--Category photos and links-->
+<div class="Cprograming"><a href="category-branch/Cprogramming.html">
+    <div class="learn" >Learn More..</div></a>
+</div>
+<div class="html"><a href="category-branch/htmlsession.html">
+    <div class="learn">Learn More..</div></a>
+</div>
+<div class="css"><a href="category-branch/css.html">
+    <div class="learn">Learn More..</div></a>
+</div>
+<div class="java"><a href="category-branch/java.html">
+    <div class="learn">Learn More..</div></a>
+</div>
 <div class="footer"><p>Copyright &copy; AzCoding 2021</p></div>
 
 </body>
