--- a/Community Branch/download.html
+++ b/Community Branch/download.html
@@ -11,10 +11,26 @@
     <div class="top">
     <h1>Download latest versions of Softwares</h1>
 </div>
-    <h2><a href="https://git-scm.com/downloads" target="_blank">Download Git</a></h2>
-    <h2><a href="https://www.codeblocks.org/downloads/binaries/" target="_blank">Download Codeblocks</a></h2>
-    <h2><a href="https://netbeans.apache.org/download/index.html" target="_blank">Download Netbeans</a></h2>
-    <h2><a href="https://www.apachefriends.org/download.html" target="_blank">Xampp Download</a></h2>
-    <h2><a href="https://code.visualstudio.com/download" target="_blank">Visual Studio Code Download</a></h2>
+<center>
+    <div class="photos"> 
+    <div  id="photo1"></div>
+    <h2><a href="https://git-scm.com/downloads" target="_blank">Download Git</a></h2></div>
+
+    <div class="photos">
+    <div  id="photo2"></div>
+    <h2><a href="https://www.codeblocks.org/downloads/binaries/" target="_blank">Download Codeblocks</a></h2></div>
+
+    <div class="photos"> 
+    <div  id="photo3"></div>
+    <h2><a href="https://netbeans.apache.org/download/index.html" target="_blank">Download Netbeans</a></h2></div>
+
+    <div class="photos"> 
+    <div  id="photo4"></div>
+    <h2><a href="https://www.apachefriends.org/download.html" target="_blank">Xampp Download</a></h2></div>
+
+    <div class="photos"> 
+    <div  id="photo5"></div>
+    <h2><a href="https://code.visualstudio.com/download" target="_blank">Visual Studio Code Download</a></h2></div>
+</center>
 </body>
 </html>
