home button add

--- a/Community Branch/download.html
+++ b/Community Branch/download.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="download.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Download</title>
 </head>
 <body>
     <div class="top">
+        <a href="home-branch/home.html"><button class="btn"><i class="fa fa-home"></i></button></a>
     <h1>Download latest versions of Softwares</h1>
 </div>
 <center>
