background photo add

--- a/Community Branch/download.html
+++ b/Community Branch/download.html
@@ -9,11 +9,12 @@
     <title>Download</title>
 </head>
 <body>
-    <div class="top">
+    <div class="top"><!--header-->
         <a href="home-branch/home.html"><button class="btn"><i class="fa fa-home"></i></button></a>
     <h1>Download latest versions of Softwares</h1>
 </div>
 <center>
+    <div class="background">
     <div class="photos"> 
     <div  id="photo1"></div>
     <h2><a href="https://git-scm.com/downloads" target="_blank">Download Git</a></h2></div>
@@ -32,7 +33,8 @@
 
     <div class="photos"> 
     <div  id="photo5"></div>
-    <h2><a href="https://code.visualstudio.com/download" target="_blank">Visual Studio Code Download</a></h2></div>
+    <h2><a href="https://code.visualstudio.com/download" target="_blank">Visual Studio Code <br>Download</a></h2></div>
 </center>
+</div>
 </body>
 </html>
