--- a/Category-Branch/Cprogramming.html
+++ b/Category-Branch/Cprogramming.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Category</title> <!--Page title -->
     <link rel = "stylesheet" href = "style/Cprogramming.css"> <!--Link to External CSS file-->
     <script src = "js/Cprogamming.js"></script>
