--- a/Category-Branch/csslesson.html
+++ b/Category-Branch/csslesson.html
@@ -69,9 +69,22 @@
       
 
         </ul>
- 
+        <br>
+        <br>
     
+        <div class = "selector">
 
+          <h1 class = "selector1">The CSS id Selector</h1>
+          <br>
+          <br>
+
+          <ul>
+
+            <li><h3>The id selector uses the id attribute of an HTML element to select a specific element.</h3></li>
+            <li><h3>The id of an element is unique within a page, so the id selector is used to select one unique element!</h3></li>
+            <li><h3>To select an element with a specific id, write a hash (#) character, followed by the id of the element.</h3></li>
+         </ul>
+     </div>
  
 
 
