--- a/Master-Branch/Forum-NewTest/forums.html
+++ b/Master-Branch/Forum-NewTest/forums.html
@@ -8,15 +8,19 @@
   <title>Form</title>
 </head>
 <body>
-  <div class="nav-bar">
+  <div class="topnav">
+
     <div class="logo"></div>
-    <div class="cont">
-      
-      <li><input type="search" placeholder="search"></li>
-      <li><a href="">Login</a></li>
-      <li><a href="">Create an Account</a></li>
-    
+  
+    <!-- Right-aligned items -->
+    <div class="topnav-right">
+      <input type="search">
+      <a href="#">Create an Account</a>
+      <a href="#">Login</a>
     </div>
+  
+  </div>
+
 
   </div>
 </body>
