--- a/Resources/youtube.html
+++ b/Resources/youtube.html
@@ -8,6 +8,8 @@
     <title>Youtube Links</title>
 </head>
 <body>
-    
+    <div class="top">
+        <h1>YouTube Resources</h1>
+    </div>
 </body>
 </html>
