--- a/Home Branch/home page.html
+++ b/Home Branch/home page.html
@@ -21,9 +21,10 @@
             <li><button class="dropbtn" id="1"><a href="#">Category  <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
                 <a href="category-branch/Cprogramming.html">C Programming</a>
-                <a href="#">Java</a>
+                <a href="#">C++</a>
                 <a href="#">HTML</a>
                 <a href="#">CSS</a>
+                <a href="#">JAVA</a>
             </div>
         </div>
 
@@ -31,17 +32,17 @@
             <li><button class="dropbtn" id="1"><a href="#">Recources  <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
                 <a href="#">YouTube</a>
-                <a href="#">Cheatsheets</a>
-                <a href="#">Blog</a>
-                <a href="#">GitHub</a>
+                <a href="https://www.w3schools.com/">W3School</a>
+                <a href="https://github.com/">GitHub</a>
+                <a href="https://www.codecademy.com/">CodeAcademy</a>
             </div>
         </div>
 
         <div class="dropdown">
             <li><button class="dropbtn" id="1"><a href="#">Community <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
-                <a href="community-branch/forums.html">Forums</a>
-                <a href="#">Chat</a>
+                <a href="#">Q & A</a>
+                <a href="#">Our Team</a>
                 
             </div>
         </div>
