our team page create

--- a/Home Branch/home page.html
+++ b/Home Branch/home page.html
@@ -42,7 +42,7 @@
             <li><button class="dropbtn" id="1"><a href="#">Community <i class="fa fa-caret-down"></i></a></button></li>
             <div class="dropdown-content">
                 <a href="#">Q & A</a>
-                <a href="#">Our Team</a>
+                <a href="ourteam.html">Our Team</a>
                 
             </div>
         </div>
