--- a/Community Branch/download.html
+++ b/Community Branch/download.html
@@ -15,7 +15,7 @@
 </div>
 <center>
     <div class="background">
-    <div class="photos"> 
+    <div class="photos" id="first"> 
     <div  id="photo1"></div>
     <h2><a href="https://git-scm.com/downloads" target="_blank">Download Git</a></h2></div>
 
