--- a/Master-Branch/Forum-NewTest/forums.html
+++ b/Master-Branch/Forum-NewTest/forums.html
@@ -5,22 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="forums.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Form</title>
 </head>
 <body>
-  <div class="topnav">
-
-    <div class="logo"></div>
-  
-    <!-- Right-aligned items -->
-    <div class="topnav-right">
-      <input type="search">
-      <a href="#">Create an Account</a>
-      <a href="#">Login</a>
-    </div>
-  
+<!-- Header -->
+<header id="main-header">
+  <div class="container">
+      <div class="logo">
+          
+      </div>
+      <nav id="navbar">
+        <ul>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Create an Account</a></li>
+      </ul>
+  </nav>
+            <div class="search-container">
+              <form action="/action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </form>
+            </div>
+            
   </div>
-
+</header>
 
   </div>
 </body>
