--- a/Master-Branch/Forum-NewTest/forums.html
+++ b/Master-Branch/Forum-NewTest/forums.html
@@ -17,8 +17,8 @@
       </div>
       <nav id="navbar">
         <ul>
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Create an Account</a></li>
+          <li><a href="Login.php">Login</a></li>
+          <li><a href="register.php">Create an Account</a></li>
       </ul>
   </nav>
             <div class="search-container">
@@ -26,11 +26,18 @@
                 <input type="text" placeholder="Search.." name="search">
                 <button type="submit"><i class="fa fa-search"></i></button>
               </form>
-            </div>
-            
+            </div>          
   </div>
-</header>
+</header><!--End of the Header -->
 
-  </div>
+<div class="all">
+<!-- Q & A Seaction -->
+<div class="left">
+</div>
+
+<!-- Category Section -->
+<div class="right"></div>
+</div>
+
 </body>
 </html>
