add category section

--- a/Master-Branch/Forum-NewTest/forums.html
+++ b/Master-Branch/Forum-NewTest/forums.html
@@ -31,13 +31,29 @@
 </header><!--End of the Header -->
 
 <div class="all">
-<!-- Q & A Seaction -->
+
+  <!-- Category Section -->
 <div class="left">
+  <h1>Categories</h1><hr>
+  <div class="cat" id="myDIV">
+  <ul>
+    <li class="btn active"><a href="#">All Topics</a></li>
+    <li class="btn"><a href="#">C Programming</a></li>
+    <li class="btn"><a href="#">HTML</a></li>
+    <li class="btn"><a href="#">CSS</a></li>
+    <li class="btn"><a href="#">JAVA</a></li>
+  </ul></div>
 </div>
 
-<!-- Category Section -->
-<div class="right"></div>
+
+
+<!-- Q & A Seaction -->
+<div class="right">
+  <h1>Q & A Section</h1>
+  <hr>
+</div>
 </div>
 
+<script src="forum.js"></script>
 </body>
 </html>
