--- a/Resources/youtube.html
+++ b/Resources/youtube.html
@@ -11,35 +11,36 @@
     <div class="top">
         <h1>YouTube Resources</h1>
     </div>
+    
     <div class="links">
     <div>C programming Tutorials
         <ul>
-            <li><a href="">link 1</a></li>
-            <li><a href="">link 2</a></li>
-            <li><a href="">link 3</a></li>
+            <li><a href="https://www.youtube.com/watch?v=IY79fWYkiPQ" target="_blank">Tutorial 01</a></li>
+            <li><a href="https://www.youtube.com/watch?v=HucJhUkDJuk" target="_blank">Tutorial 02</a></li>
+            <li><a href="https://www.youtube.com/watch?v=uBC7Yy_WtOE" target="_blank">Tutorial 03</a></li>
         </ul>
     </div>
     <div>HTML Tutorials
         <ul>
-            <li><a href="">link 1</a></li>
-            <li><a href="">link 2</a></li>
-            <li><a href="">link 3</a></li>
+            <li><a href="https://www.youtube.com/watch?v=WwNuvGLblJU" target="_blank">Tutorial 01</a></li>
+            <li><a href="https://www.youtube.com/watch?v=bWPMSSsVdPk" target="_blank">Tutorial 02</a></li>
+            <li><a href="https://www.youtube.com/watch?v=UB1O30fR-EE" target="_blank">Tutorial 03</a></li>
         </ul>
     </div>
     <div>CSS Tutorials
         <ul>
-            <li><a href="">link 1</a></li>
-            <li><a href="">link 2</a></li>
-            <li><a href="">link 3</a></li>
+            <li><a href="https://www.youtube.com/watch?v=1PnVor36_40" target="_blank">Tutorial 01</a></li>
+            <li><a href="https://www.youtube.com/watch?v=gD3G67oPg-w" target="_blank">Tutorial 02</a></li>
+            <li><a href="https://www.youtube.com/watch?v=lBfshkPlMW8" target="_blank">Tutorial 03</a></li>
         </ul>
     </div>
     <div>Java Tutorials
         <ul>
-            <li><a href="">link 1</a></li>
-            <li><a href="">link 2</a></li>
-            <li><a href="">link 3</a></li>
+            <li><a href="https://www.youtube.com/watch?v=W6NZfCO5SIk" target="_blank">Tutorial 01</a></li>
+            <li><a href="https://www.youtube.com/watch?v=W6NZfCO5SIk&list=RDCMUCWv7vMbMWH4-V0ZXdmDpPBA&start_radio=1&rv=W6NZfCO5SIk&t=12" target="_blank">Tutorial 02</a></li>
+            <li><a href="https://www.youtube.com/watch?v=jS4aFq5-91M" target="_blank">Tutorial 03</a></li>
         </ul>
     </div>
-</div>
+    </div>
 </body>
 </html>
