--- a/Category-Branch/Cprogramming.html
+++ b/Category-Branch/Cprogramming.html
@@ -21,11 +21,11 @@
           <ul>
             
             <li class = "home"><a href="#">HOME</a></li> 
-            <li class = "html"> <a href = "#">HTML</a></li>
-            <li class = "css"><a href = "#">CSS</a></li>
-            <li class = "c++"><a href = "#">C++</a></li>  
-            <li class = "java"><a href = "#">JAVA</a></li>  
-            <li class = "c"><a href="#">C</a></li>    
+            <li class = "html"> <a href = "htmllesson.html">HTML</a></li>
+            <li class = "css"><a href = "csslesson.html">CSS</a></li>
+            <li class = "c++"><a href = "C++lesson.html">C++</a></li>  
+            <li class = "java"><a href = "Javalession.html">JAVA</a></li>  
+            <li class = "c"><a href="Clession.html">C</a></li>    
             <input type ="search" placeholder="Type to Search" class = "search">   
           
           </ul>
