--- a/Master-Branch/Forum-NewTest/forums.html
+++ b/Master-Branch/Forum-NewTest/forums.html
@@ -12,7 +12,7 @@
 <body>
 <!-- Header -->
 <header id="main-header">
-  <div class="container">
+  <div class="cont">
       <div class="logo">
           
       </div>
@@ -22,11 +22,8 @@
           <li><a href="register.php">Create an Account</a></li>
       </ul>
   </nav>
-            <div class="search-container">
-              <form action="/action_page.php">
-                <input type="text" placeholder="Search.." name="search">
-                <button type="submit"><i class="fa fa-search"></i></button>
-              </form>
+            <div class="search-container">       
+                <h1 id="qa">Q & A Section</h1>
             </div>          
   </div>
 </header><!--End of the Header -->
@@ -38,7 +35,7 @@
   <h1>Categories</h1><hr>
   <div class="cat" id="myDIV">
   <ul>
-    <li class="btn active"><a href="#">All Topics</a></li>
+    <li class="btn"><a href="#">All Topics</a></li>
     <li class="btn"><a href="#">C Programming</a></li>
     <li class="btn"><a href="#">HTML</a></li>
     <li class="btn"><a href="#">CSS</a></li>
