--- a/Home Branch/home page.html
+++ b/Home Branch/home page.html
@@ -52,20 +52,28 @@
         </ul>
     </div><!--End of the nav bar-->
 
-<div class="bgcolor">
+    <div class="bgcolor">
 <center>
     <!--Slider create-->
     <div class="slider">
         <figure>
-            <div class="slide"><img src="home-images/13.jpeg" alt=""></div>
+
             <div class="slide"><img src="home-images/2.jpg" alt=""></div>
-            <div class="slide"><img src="home-images/3.jpg" alt=""></div>
-            <div class="slide"><img src="home-images/4.jpg" alt=""></div>
-            <div class="slide"><img src="home-images/5.png" alt=""></div>
+            <div class="slide"><img src="images/13.jpg" alt=""></div>
+            <div class="slide"><img src="images/14.jpg" alt=""></div> 
+            <div class="slide"><img src="images/12.jpg" alt=""></div>
+            
+            <div class="slide"><img src="images/11.jpeg" alt=""></div>
+            
         </figure>
     </div>
 <!--End of the Slider-->
+</div>
+<hr id="hr1">
+<h1>Learn Programming</h1>
+<hr id="hr2">
 </center>
+<div class="learn1">
 <!--Category photos and links-->
 <div class="Cprograming"><a href="category-branch/Cprogramming.html">
     <div class="learn" >Learn More..</div></a>
@@ -78,9 +86,9 @@
 </div>
 <div class="java"><a href="category-branch/java.html">
     <div class="learn">Learn More..</div></a>
-</div>
+</div></div>
 <div class="footer"><p>Copyright &copy; AzCoding 2021</p></div>
-</div>
+
  <!-- Option 1: Bootstrap Bundle with Popper -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
