--- a/Home Branch/home page.html
+++ b/Home Branch/home page.html
@@ -70,10 +70,11 @@
 <!--End of the Slider-->
 </div>
 <hr id="hr1">
+<div class="learn1">
 <h1>Learn Programming</h1>
 <hr id="hr2">
 </center>
-<div class="learn1">
+
 <!--Category photos and links-->
 <div class="Cprograming"><a href="category-branch/Cprogramming.html">
     <div class="learn" >Learn More..</div></a>
@@ -86,7 +87,7 @@
 </div>
 <div class="java"><a href="category-branch/java.html">
     <div class="learn">Learn More..</div></a>
-</div></div>
+</div>
 <div class="footer"><p>Copyright &copy; AzCoding 2021</p></div>
 
  <!-- Option 1: Bootstrap Bundle with Popper -->
